@@ -1,3 +1,12 @@
+2001-09-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py (WHITELIST_AUTO_APPEND): New variable to toggle
+	whether tmda-filter should automatically append a confirming
+	sender's address to the WHITELIST.
+
+	* Util.py (append_to_file): New function which appends a string to
+	a textfile.
+	
 2001-09-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Defaults.py (CONFIRM_MAX_MESSAGE_SIZE): New variable that
